markup/app/styles/sections/header.scss
header[role='banner']
  {
    text-align: center;
    padding-top: 45px;
  }


/*====== Top section ======*/

#header-top
  {
    position: absolute;
    top: 45px;
    left: 0;
    right: 0;
    z-index: 1000;

    transition: all 0.2s linear;
    @extend %FadeOut;
    animation: 0.8s FadeIn 5s linear forwards;

    &.fixed
      {
        position: fixed;
        background-color: $c-violet-dark;
        top: 0;

        &, a { color: #fff; }
        .header-top__sec { padding: 4px 0; }
        .header-top__nav a
          {
              // font-weight: 300;
              font-size: 18px;
          }

        #header-top__logo
          {
            display: block;
          }


        .dropdown-content
          {
            background-color: $c-violet-dark;
          }
      }





    & > .secw-base
      {
        display: table;
        width: 100%;
     }
  }

.header-top__sec
  {
    display: table-cell;
    vertical-align: middle;
    padding: 20px 0 30px;
  }



#header-top__logo
  {
    display: none;

    img
      {
        display: block;
        height: 30px;
      }
  }


.header-top__nav
  {
    & > *
      {
        display: inline-block;
        margin-right: 60px;

        &:last-child
          {
            margin-right: 0;
          }
      }

    a
      {
        @extend %link_noline;
        // font-weight: 500;
        font-size: 22px;
        line-height: 1;
        color: $c-text;
      }


    .dropdown
      {
        & > a
          {
            position: relative;

            &:before, &:after
              {
                content:"";
                height: 1px;
                background-color: $c-violet-dark;
                position: absolute;
                bottom: -2px;
                transition: all 0.2s ease-in-out;
                width: 50%;
              }

            &:before
              {
                left: 0;
                right: 50%;
              }

            &:after
              {
                left: 50%;
                right: 0;
              }
          }


        &:hover
          {
              & > a
                {
                  &:before, &:after
                    {
                      bottom: -10px;
                      width: 14px;
                      left: 50%;
                      right: auto;
                    }

                  &:before
                    {
                      transform: rotate(30deg);
                      transform-origin: 100% 0;
                      margin-left: -13px;
                    }

                  &:after
                    {
                      transform: rotate(-30deg);
                      transform-origin: 0 0;
                    }
                }
          }
      }



      .dropdown-content
        {
          &, a { font-weight: 300; }
        }


      
  }


/*====== end of Top section ======*/



/*====== Header navigation ======*/

.hamburger
  {
    display: inline-block;
    cursor: pointer;

    .line
      {
        width: 30px;
        height: 2px;
        background-color: $c-violet-dark;
        display: block;
        margin: 8px auto;
        border-radius: 2px;
        transition: all .3s ease-in-out;

        &:first-child
          {
            transform: translateY(-5px);
            animation: 1.5s HamburgerLineDown 0.8s forwards;
          }
        &:last-child
          {
            transform: translateY(5px);
            animation: 1.5s HamburgerLineUp 0.8s forwards;
          }
      }

     @extend %FadeOut;

      @media screen and (max-width: $mq-menuhide) 
        {
          animation: 0.2s FadeIn 0.2s linear forwards;
        }
  }


.nav-mobilehide
  {

    @extend %FadeOut;

    @media screen and (min-width: $mq-menuhide) 
      {
        animation: 0.2s FadeIn 0.2s linear forwards;
      }
  }

/*====== end of Header navigation ======*/






/*====== MIDDLE SECTION ======*/

#header-mid
  {
    position: relative;
    box-sizing: border-box;

    padding-top: 68px;
    min-height: 370px;

    @media screen and (min-width: $mq-mobileCanvas)
      {
        padding-top: 157px;
        min-height: 460px;
      }

  }

#logo-ethereum
  {
    position: absolute;
    width: 37px;
    top: 17px;
    left: 50%;
    margin-left: -195px;

    @extend %FadeOut;
    animation: 0.5s FadeIn 1s ease forwards;

    // transform: scale(.3);
    // animation: 0.5s BounceIn 1s ease forwards;
  }

  /*====== end of MIDDLE SECTION ======*/







/*====== LOGO ROBONOMICS ======*/

@keyframes logo-triangle-1
  {
    0% { fill: $c-blue; }
    25% { fill: $c-blue; }
    50% { fill: $c-blue; }
    75% { fill: $c-violet-light; }
    100% { fill: $c-blue; }
  }

@keyframes logo-triangle-2
  {
    0% { fill: $c-violet-light; }
    25% { fill: #E0BDED; }
    50% { fill: $c-blue; }
    75% { fill: $c-blue; }
    100% { fill: $c-violet-light; }
  }

@keyframes logo-triangle-3
  {
    0% { fill: $c-violet-mid; }
    25% { fill: $c-violet-light; }
    50% { fill: $c-violet-light; }
    75% { fill: $c-violet-dark; }
    100% { fill: $c-violet-mid; }
  }

$duration: 15s;
$delay: 1s;

#header-logo-robonomics
  {
    @extend %FadeOut;
    animation: 0.5s FadeIn 1s ease forwards;
  }

.logo-robonomics
  {
    .dot
      {
        fill: $c-blue;

        @extend %FadeOut;
        animation: 0.5s FadeIn 4s ease forwards;
      }

    .line
      {
        fill:none;
        stroke:#03A5ED;
        stroke-miterlimit:10;

        stroke-dasharray: 700;
        stroke-dashoffset: 700;
        animation: 1s DrawSvgPath 3s ease-in-out forwards; 
      }

    .triangle-1
      {
        fill: $c-blue;
        animation: $duration logo-triangle-1 $delay linear infinite;
      }

    .triangle-2
      {
        fill: $c-violet-light;
        animation: $duration logo-triangle-2 $delay linear infinite;
      }

    .triangle-3
      {
        fill: $c-violet-mid;
        animation: $duration logo-triangle-3 $delay linear infinite;
      }
  }


/*====== end of LOGO ROBONOMICS ======*/






/*====== HEADER SVG ======*/

#snapsvg-header-wrap
  {
    overflow: hidden;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 0;

    height: 370px;

    @media screen and (min-width: $mq-mobileCanvas)
      {
        height: 460px;
      }

    @media screen and (max-width: $mq-mobileCanvas)
      {
        line, text { display: none; }
      }
  }


#snapsvg-header
  {
    @extend %svgBack;
  }

#header-mid__content
  {
    @extend %svgBackContent;
  }


/*====== end of HEADER SVG ======*/







/*====== TITLES ======*/

#header-title
  {
    margin-top: 97px;

    span
      {
        display: inline-block;
        text-transform: uppercase;
        background-color: $c-violet-mid;
        color: #fff;
        letter-spacing: 4px;
        padding: 3px 20px;
        font-size: 26px;
        font-weight: 300;
      }
  }


#header-subtitle
  {
    color: $c-violet-mid;
    font-size: 22px;
    font-weight: 300;
    margin-top: 20px;
  }

/*====== end of TITLES ======*/





// .dropdown:hover
//   {
//     .hamburger .line{
//         &:nth-child(2){ opacity: 0; }
//         &:nth-child(1) { transform: translateY(10px) rotate(45deg); }
//         &:nth-child(3) { transform: translateY(-10px) rotate(-45deg); }
//       }
//   }

